fix weird space above collapsed navbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -82,6 +82,7 @@ h2 {
     text-decoration: none;
   }
 }
+.navbar-fixed-top { position: absolute !important }
 
 /* footer */
 
